--- a/algorithms/AddressArithmetic/driver/Makefile
+++ b/algorithms/AddressArithmetic/driver/Makefile
@@ -14,7 +14,7 @@ quickRegression.bash:
 include ../../../Makefile.incl
 -include $(DEPINCL)
 
-# pick up all algorith specific obj files
+# pick up all algorithm specific obj files
 ALG_OBJ_SET=  							   \
 $(wildcard ../src/obj/*.o) 					   \
 $(wildcard ../../ControlFlowReversal/src/obj/*.o) 		   \
@@ -24,11 +24,20 @@ $(wildcard ../../BasicBlockPreaccumulation/src/obj/*.o)            \
 $(wildcard ../../Linearization/src/obj/*.o)			   \
 $(wildcard ../../TypeChange/src/obj/*.o)
 
-LIBS+=../../InlinableXMLRepresentation/lib/libxaifBoosterInlinableXMLRepresentation.a
-LIBS+=../../CrossCountryInterface/lib/libxaifBoosterCrossCountryInterface.a
-LIBS+=../../DerivativePropagator/lib/libxaifBoosterDerivativePropagator.a
-LIBS+=../../AdjointUtils/lib/libxaifBoosterAdjointUtils.a
-LIBS+=../../CodeReplacement/lib/libxaifBoosterCodeReplacement.a
+VPATH+=../../InlinableXMLRepresentation/lib
+LIBS+=-lxaifBoosterInlinableXMLRepresentation
+
+VPATH+=../../CrossCountryInterface/lib
+LIBS+=-lxaifBoosterCrossCountryInterface
+
+VPATH+=../../DerivativePropagator/lib
+LIBS+=-lxaifBoosterDerivativePropagator
+
+VPATH+=../../AdjointUtils/lib
+LIBS+=-lxaifBoosterAdjointUtils
+
+VPATH+=../../CodeReplacement/lib
+LIBS+=-lxaifBoosterCodeReplacement
 
 # setup for ANGEL
 ifndef ANGELROOT
