--- a/algorithms/TraceDiff/driver/Makefile
+++ b/algorithms/TraceDiff/driver/Makefile
@@ -64,11 +64,11 @@ quickRegression.bash:
 include ../../../Makefile.incl
 -include $(DEPINCL)
 
-# pick up all algorith specific obj files
-ALG_OBJ_SET=  							   \
-$(wildcard ../src/obj/*.o) 					   \
-$(wildcard ../../ControlFlowReversal/src/obj/*.o) 		   \
-$(wildcard ../../TypeChange/src/obj/*.o) 
+# pick up all algorithm specific obj files
+ALG_OBJ_SET=                                      \
+$(wildcard ../src/obj/*.o)                        \
+$(wildcard ../../ControlFlowReversal/src/obj/*.o) \
+$(wildcard ../../TypeChange/src/obj/*.o)
 
 VPATH+=../../InlinableXMLRepresentation/lib
 LIBS+=-lxaifBoosterInlinableXMLRepresentation
