--- a/algorithms/BasicBlockPreaccumulationReverse/driver/Makefile
+++ b/algorithms/BasicBlockPreaccumulationReverse/driver/Makefile
@@ -75,20 +75,11 @@ $(wildcard ../../BasicBlockPreaccumulation/src/obj/*.o)            \
 $(wildcard ../../Linearization/src/obj/*.o)			   \
 $(wildcard ../../TypeChange/src/obj/*.o)
 
-VPATH+=../../InlinableXMLRepresentation/lib
-LIBS+=-lxaifBoosterInlinableXMLRepresentation
-
-VPATH+=../../CrossCountryInterface/lib
-LIBS+=-lxaifBoosterCrossCountryInterface
-
-VPATH+=../../DerivativePropagator/lib
-LIBS+=-lxaifBoosterDerivativePropagator
-
-VPATH+=../../AdjointUtils/lib
-LIBS+=-lxaifBoosterAdjointUtils
-
-VPATH+=../../CodeReplacement/lib
-LIBS+=-lxaifBoosterCodeReplacement
+LIBS+=../../InlinableXMLRepresentation/lib/libxaifBoosterInlinableXMLRepresentation.a
+LIBS+=../../CrossCountryInterface/lib/libxaifBoosterCrossCountryInterface.a
+LIBS+=../../DerivativePropagator/lib/libxaifBoosterDerivativePropagator.a
+LIBS+=../../AdjointUtils/lib/libxaifBoosterAdjointUtils.a
+LIBS+=../../CodeReplacement/lib/libxaifBoosterCodeReplacement.a
 
 # setup for ANGEL
 ifndef ANGELROOT
