--- a/algorithms/BasicBlockPreaccumulationTape/driver/Makefile
+++ b/algorithms/BasicBlockPreaccumulationTape/driver/Makefile
@@ -73,17 +73,10 @@ $(wildcard ../../BasicBlockPreaccumulation/src/obj/*.o) \
 $(wildcard ../../Linearization/src/obj/*.o)             \
 $(wildcard ../../TypeChange/src/obj/*.o)
 
-VPATH+=../../InlinableXMLRepresentation/lib
-LIBS+=-lxaifBoosterInlinableXMLRepresentation
-
-VPATH+=../../CrossCountryInterface/lib
-LIBS+=-lxaifBoosterCrossCountryInterface
-
-VPATH+=../../DerivativePropagator/lib
-LIBS+=-lxaifBoosterDerivativePropagator
-
-VPATH+=../../AdjointUtils
-LIBS+=-lxaifBoosterAdjointUtils
+LIBS+=../../InlinableXMLRepresentation/lib/libxaifBoosterInlinableXMLRepresentation.a
+LIBS+=../../CrossCountryInterface/lib/libxaifBoosterCrossCountryInterface.a
+LIBS+=../../DerivativePropagator/lib/libxaifBoosterDerivativePropagator.a
+LIBS+=../../AdjointUtils/lib/libxaifBoosterAdjointUtils.a
 
 # setup for ANGEL
 ifndef ANGELROOT
