--- a/algorithms/TraceDiff/driver/Makefile
+++ b/algorithms/TraceDiff/driver/Makefile
@@ -70,14 +70,9 @@ $(wildcard ../src/obj/*.o)                        \
 $(wildcard ../../ControlFlowReversal/src/obj/*.o) \
 $(wildcard ../../TypeChange/src/obj/*.o)
 
-VPATH+=../../InlinableXMLRepresentation/lib
-LIBS+=-lxaifBoosterInlinableXMLRepresentation
-
-VPATH+=../../AdjointUtils/lib
-LIBS+=-lxaifBoosterAdjointUtils
-
-VPATH+=../../CodeReplacement/lib
-LIBS+=-lxaifBoosterCodeReplacement
+LIBS+=../../InlinableXMLRepresentation/lib/libxaifBoosterInlinableXMLRepresentation.a
+LIBS+=../../AdjointUtils/lib/libxaifBoosterAdjointUtils.a
+LIBS+=../../CodeReplacement/lib/libxaifBoosterCodeReplacement.a
 
 $(MAIN): $(OBJS) $(ALG_OBJ_SET) $(SYSTEM_OBJ_SET) $(LIBS)
 	$(CC) $^ $(LFLAGS) -o $@
