--- a/algorithms/TypeChange/driver/Makefile
+++ b/algorithms/TypeChange/driver/Makefile
@@ -70,8 +70,7 @@ include ../../../Makefile.incl
 ALG_OBJ_SET=               \
 $(wildcard ../src/obj/*.o)
 
-VPATH+=../../InlinableXMLRepresentation/lib
-LIBS+=-lxaifBoosterInlinableXMLRepresentation
+LIBS+=../../InlinableXMLRepresentation/lib/libxaifBoosterInlinableXMLRepresentation.a
 
 $(MAIN): $(OBJS) $(ALG_OBJ_SET) $(SYSTEM_OBJ_SET) $(LIBS)
 	$(CC) $^ $(LFLAGS) -o $@
