--- a/algorithms/Linearization/driver/Makefile
+++ b/algorithms/Linearization/driver/Makefile
@@ -71,8 +71,7 @@ ALG_OBJ_SET=                             \
 $(wildcard ../src/obj/*.o)               \
 $(wildcard ../../TypeChange/src/obj/*.o)
 
-VPATH+=../../InlinableXMLRepresentation/lib
-LIBS+=-lxaifBoosterInlinableXMLRepresentation
+LIBS+=../../InlinableXMLRepresentation/lib/libxaifBoosterInlinableXMLRepresentation.a
 
 VPATH+=../../SaveValuesAcross/lib
 LIBS+=-lxaifBoosterSaveValuesAcross
