--- a/algorithms/TraceDiff/driver/Makefile
+++ b/algorithms/TraceDiff/driver/Makefile
@@ -73,9 +73,7 @@ $(wildcard ../../TypeChange/src/obj/*.o)
 LIBS+=../../InlinableXMLRepresentation/lib/libxaifBoosterInlinableXMLRepresentation.a
 LIBS+=../../AdjointUtils/lib/libxaifBoosterAdjointUtils.a
 LIBS+=../../CodeReplacement/lib/libxaifBoosterCodeReplacement.a
-VPATH+=../../SaveValuesAcross/lib
-LIBS+=-lxaifBoosterSaveValuesAcross
-
+LIBS+=../../SaveValuesAcross/lib/libxaifBoosterSaveValuesAcross.a
 
 $(MAIN): $(OBJS) $(ALG_OBJ_SET) $(SYSTEM_OBJ_SET) $(LIBS)
 	$(CC) $^ $(LFLAGS) -o $@
