slight change to driver makefiles to facilitate parallel make

--- a/algorithms/AddressArithmetic/driver/Makefile
+++ b/algorithms/AddressArithmetic/driver/Makefile
@@ -1,6 +1,8 @@
 MAIN=oadDriver
 
-driver: obj buildStamp.hpp $(MAIN) quickRegression.bash
+driver: obj $(MAIN) quickRegression.bash
+
+$(MAIN).cpp: buildStamp.hpp
 
 CLEANTARGETS+=buildStamp.hpp tmp $(MAIN) quickRegression.bash
 
