--- a/algorithms/ConstantFolding/driver/Makefile
+++ b/algorithms/ConstantFolding/driver/Makefile
@@ -52,7 +52,9 @@
 # ========== end copyright notice ==============
 MAIN=oadDriver
 
-driver: obj buildStamp.hpp $(MAIN) quickRegression.bash
+driver: obj $(MAIN) quickRegression.bash
+
+$(MAIN).cpp: buildStamp.hpp
 
 CLEANTARGETS+=buildStamp.hpp tmp $(MAIN) quickRegression.bash
 
