--- a/algorithms/BasicBlockPreaccumulationTapeAdjoint/driver/Makefile
+++ b/algorithms/BasicBlockPreaccumulationTapeAdjoint/driver/Makefile
@@ -79,6 +79,7 @@ LIBS+=../../CrossCountryInterface/lib/libxaifBoosterCrossCountryInterface.a
 LIBS+=../../DerivativePropagator/lib/libxaifBoosterDerivativePropagator.a
 LIBS+=../../AdjointUtils/lib/libxaifBoosterAdjointUtils.a
 LIBS+=../../SaveValuesAcross/lib/libxaifBoosterSaveValuesAcross.a
+LIBS+=../../RequiredValues/lib/libxaifBoosterRequiredValues.a
 
 # setup for ANGEL
 ifndef ANGELROOT
