added a framework for accumulating a list of all active variables to be initialized & accessing and initializing them in ControlFlowReversal

--- a/algorithms/BasicBlockPreaccumulationReverse/driver/Makefile
+++ b/algorithms/BasicBlockPreaccumulationReverse/driver/Makefile
@@ -82,6 +82,7 @@ LIBS+=../../CrossCountryInterface/lib/libxaifBoosterCrossCountryInterface.a
 LIBS+=../../DerivativePropagator/lib/libxaifBoosterDerivativePropagator.a
 LIBS+=../../AdjointUtils/lib/libxaifBoosterAdjointUtils.a
 LIBS+=../../CodeReplacement/lib/libxaifBoosterCodeReplacement.a
+LIBS+=../../RequiredValues/lib/libxaifBoosterRequiredValues.a
 
 # setup for ANGEL
 ifndef ANGELROOT
