--- a/algorithms/BasicBlockPreaccumulationTape/driver/Makefile
+++ b/algorithms/BasicBlockPreaccumulationTape/driver/Makefile
@@ -79,6 +79,7 @@ LIBS+=../../InlinableXMLRepresentation/lib/libxaifBoosterInlinableXMLRepresentat
 LIBS+=../../CrossCountryInterface/lib/libxaifBoosterCrossCountryInterface.a
 LIBS+=../../DerivativePropagator/lib/libxaifBoosterDerivativePropagator.a
 LIBS+=../../AdjointUtils/lib/libxaifBoosterAdjointUtils.a
+LIBS+=../../RequiredValues/lib/libxaifBoosterRequiredValues.a
 
 # setup for ANGEL
 ifndef ANGELROOT
