--- a/algorithms/ControlFlowReversal/driver/Makefile
+++ b/algorithms/ControlFlowReversal/driver/Makefile
@@ -69,10 +69,20 @@ include ../../../Makefile.incl
 -include $(DEPINCL)
 
 # pick up all algorithm specific obj files
-ALG_OBJ_SET=$(wildcard ../src/obj/*.o)
+ALG_OBJ_SET=                                      \
+$(wildcard ../src/obj/*.o)                        \
+$(wildcard ../../CrossCountryInterface/src/obj/*.o)			\
+$(wildcard ../../DerivativePropagator/src/obj/*.o)			\
+$(wildcard ../../BasicBlockPreaccumulation/src/obj/*.o) \
+$(wildcard ../../BasicBlockPreaccumulationTape/src/obj/*.o) \
+$(wildcard ../../BasicBlockPreaccumulationTapeAdjoint/src/obj/*.o) \
+$(wildcard ../../Linearization/src/obj/*.o)                 		\
+$(wildcard ../../TypeChange/src/obj/*.o)
 
 LIBS+=../../InlinableXMLRepresentation/lib/libxaifBoosterInlinableXMLRepresentation.a
 LIBS+=../../AdjointUtils/lib/libxaifBoosterAdjointUtils.a
+LIBS+=../../CodeReplacement/lib/libxaifBoosterCodeReplacement.a
+LIBS+=../../RequiredValues/lib/libxaifBoosterRequiredValues.a
 
 # setup for ANGEL
 ifndef ANGELROOT
