--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,3 +1,12 @@
+# ========== begin copyright notice ===================
+# This file is part of
+# ---------------
+# xaifBooster
+# ---------------
+# which is distributed under the BSD license.
+# The full COPYRIGHT notice can be found in the top
+# level directory of the xaifBooster distribution.
+# ========== end copyright notice =====================
 FLIST=$(wildcard *.tex *.eps)
 xaifbooster_doc.ps: $(FLIST) xaifbooster_doc.bbl
 	latex xaifbooster_doc
