--- a/Makefile.incl
+++ b/Makefile.incl
@@ -49,6 +49,9 @@ endif
 ifeq ($(PLATFORM),i686-Cygwin)
 include $(XAIFBOOSTERROOT)/$(ROOTDIR)/Makefile.incl.x86-Linux
 endif
+ifeq ($(PLATFORM),x86-Cygwin)
+include $(XAIFBOOSTERROOT)/$(ROOTDIR)/Makefile.incl.x86-Linux
+endif
 ifeq ($(PLATFORM),x86-Linux)
 include $(XAIFBOOSTERROOT)/$(ROOTDIR)/Makefile.incl.$(PLATFORM)
 endif
