fix up build problem when a .cpp source file is removed but the incremental build picks up the orhpaned .o file that should be removed. So derive the .o names directly from the list of the .cpp files in the src subdirs.

--- a/Makefile.incl
+++ b/Makefile.incl
@@ -29,7 +29,7 @@ export XERCESC_INCLUDE_DIR=$(XERCESCROOT)/include
 
 export BOOST_INCLUDE_DIR=$(BOOSTROOT)
 
-export SYSTEM_OBJ_SET=$(wildcard $(XAIFBOOSTERROOT)/$(ROOTDIR)/system/src/obj/*.o)
+export SYSTEM_OBJ_SET=$(addsuffix .o, $(addprefix $(XAIFBOOSTERROOT)/$(ROOTDIR)/system/src/obj/, $(basename $(notdir $(wildcard $(XAIFBOOSTERROOT)/$(ROOTDIR)/system/src/*.cpp)))))
 
 export SYSTEM_INC_DIR=$(XAIFBOOSTERROOT)
 
