--- a/algorithms/TypeChange/driver/Makefile
+++ b/algorithms/TypeChange/driver/Makefile
@@ -25,7 +25,7 @@ include ../../../Makefile.incl
 
 # pick up all algorithm specific obj files
 ALG_OBJ_SET=               \
-$(wildcard ../src/obj/*.o)
+$(addsuffix .o, $(addprefix ../src/obj/, $(basename $(notdir $(wildcard ../src/*.cpp)))))
 
 LIBS+=../../InlinableXMLRepresentation/lib/libxaifBoosterInlinableXMLRepresentation.a
 LIBS+=../../SaveValuesAcross/lib/libxaifBoosterSaveValuesAcross.a
